[gd_scene load_steps=9 format=2]

[ext_resource path="res://Props/Lift/LifeInside.material" type="Material" id=1]
[ext_resource path="res://Props/Lift/LiftMat.material" type="Material" id=2]
[ext_resource path="res://Props/Lift/Lift.gd" type="Script" id=3]

[sub_resource type="ArrayMesh" id=1]
resource_name = "Lift_Cube"
surfaces/0 = {
"aabb": AABB( -1.7, 0, -1.825, 3.40001, 3.00001, 2.02501 ),
"array_data": PoolByteArray( 154, 153, 217, 63, 0, 0, 64, 64, 205, 204, 76, 62, 0, 127, 129, 63, 0, 57, 0, 52, 154, 153, 217, 63, 0, 0, 64, 64, 153, 153, 233, 191, 0, 127, 129, 63, 0, 57, 0, 56, 154, 153, 217, 191, 0, 0, 64, 64, 153, 153, 233, 191, 0, 127, 129, 63, 0, 59, 0, 56, 154, 153, 217, 191, 0, 0, 64, 64, 205, 204, 76, 62, 0, 127, 129, 63, 0, 59, 0, 52, 154, 153, 217, 191, 0, 0, 64, 64, 205, 204, 76, 62, 0, 0, 244, 120, 0, 57, 0, 0, 154, 153, 217, 191, 0, 0, 0, 0, 205, 204, 76, 62, 0, 0, 0, 127, 0, 54, 0, 0, 102, 102, 102, 191, 0, 0, 0, 0, 205, 204, 76, 62, 0, 0, 0, 126, 0, 54, 204, 38, 102, 102, 102, 191, 51, 51, 19, 64, 205, 204, 76, 62, 0, 0, 223, 110, 204, 56, 247, 38, 102, 102, 102, 63, 51, 51, 19, 64, 205, 204, 76, 62, 0, 0, 19, 117, 201, 56, 246, 50, 102, 102, 102, 63, 0, 0, 0, 0, 205, 204, 76, 62, 0, 0, 0, 126, 0, 54, 240, 50, 154, 153, 217, 63, 0, 0, 0, 0, 205, 204, 76, 62, 0, 0, 0, 126, 0, 54, 0, 52, 154, 153, 217, 63, 0, 0, 64, 64, 205, 204, 76, 62, 0, 0, 22, 115, 0, 57, 0, 52, 154, 153, 217, 191, 0, 0, 64, 64, 153, 153, 233, 191, 129, 0, 0, 127, 0, 57, 0, 58, 154, 153, 217, 191, 0, 0, 0, 0, 153, 153, 233, 191, 129, 0, 0, 127, 0, 54, 0, 58, 154, 153, 217, 191, 0, 0, 0, 0, 205, 204, 76, 62, 129, 0, 0, 127, 0, 54, 0, 60, 154, 153, 217, 191, 0, 0, 64, 64, 205, 204, 76, 62, 129, 0, 0, 127, 0, 57, 0, 60, 154, 153, 217, 191, 0, 0, 0, 0, 205, 204, 76, 62, 0, 129, 127, 63, 0, 48, 0, 52, 154, 153, 217, 191, 0, 0, 0, 0, 153, 153, 233, 191, 0, 129, 127, 63, 0, 48, 0, 56, 154, 153, 217, 63, 0, 0, 0, 0, 153, 153, 233, 191, 0, 129, 127, 63, 0, 54, 0, 56, 154, 153, 217, 63, 0, 0, 0, 0, 205, 204, 76, 62, 0, 129, 127, 63, 0, 54, 0, 52, 102, 102, 102, 191, 0, 0, 0, 0, 205, 204, 76, 62, 0, 129, 127, 63, 217, 48, 0, 52, 102, 102, 102, 63, 0, 0, 0, 0, 205, 204, 76, 62, 0, 129, 127, 63, 120, 53, 0, 52, 154, 153, 217, 63, 0, 0, 64, 64, 205, 204, 76, 62, 127, 0, 0, 127, 0, 57, 0, 52, 154, 153, 217, 63, 0, 0, 0, 0, 205, 204, 76, 62, 127, 0, 0, 127, 0, 54, 0, 52, 154, 153, 217, 63, 0, 0, 0, 0, 153, 153, 233, 191, 127, 0, 0, 127, 0, 54, 0, 56, 154, 153, 217, 63, 0, 0, 64, 64, 153, 153, 233, 191, 127, 0, 0, 127, 0, 57, 0, 56, 154, 153, 217, 63, 0, 0, 64, 64, 153, 153, 233, 191, 127, 127, 0, 127, 0, 57, 0, 56, 154, 153, 217, 63, 0, 0, 0, 0, 153, 153, 233, 191, 127, 127, 0, 127, 0, 54, 0, 56, 154, 153, 217, 191, 0, 0, 0, 0, 153, 153, 233, 191, 127, 127, 0, 127, 0, 54, 0, 58, 154, 153, 217, 191, 0, 0, 64, 64, 153, 153, 233, 191, 127, 127, 0, 127, 0, 57, 0, 58 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 0, 0, 3, 0, 2, 0, 4, 0, 6, 0, 5, 0, 4, 0, 7, 0, 6, 0, 8, 0, 10, 0, 9, 0, 8, 0, 11, 0, 10, 0, 4, 0, 8, 0, 7, 0, 4, 0, 11, 0, 8, 0, 12, 0, 14, 0, 13, 0, 12, 0, 15, 0, 14, 0, 16, 0, 18, 0, 17, 0, 16, 0, 19, 0, 18, 0, 20, 0, 19, 0, 16, 0, 21, 0, 19, 0, 20, 0, 22, 0, 24, 0, 23, 0, 22, 0, 25, 0, 24, 0, 26, 0, 28, 0, 27, 0, 26, 0, 29, 0, 28, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 54,
"material": ExtResource( 2 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 30
}
surfaces/1 = {
"aabb": AABB( -0.9, 0, -1.725, 1.8, 2.30001, 1.925 ),
"array_data": PoolByteArray( 102, 102, 102, 191, 51, 51, 19, 64, 204, 204, 220, 191, 0, 0, 0, 126, 204, 56, 247, 38, 102, 102, 102, 191, 10, 215, 35, 60, 204, 204, 220, 191, 0, 0, 0, 126, 0, 54, 204, 38, 102, 102, 102, 63, 10, 215, 35, 60, 204, 204, 220, 191, 0, 0, 0, 126, 0, 54, 240, 50, 102, 102, 102, 63, 51, 51, 19, 64, 204, 204, 220, 191, 0, 0, 0, 126, 201, 56, 246, 50, 102, 102, 102, 63, 10, 215, 35, 60, 204, 204, 220, 191, 129, 0, 127, 63, 0, 54, 240, 50, 102, 102, 102, 63, 0, 0, 0, 0, 205, 204, 76, 62, 129, 0, 127, 63, 0, 54, 240, 50, 102, 102, 102, 63, 51, 51, 19, 64, 205, 204, 76, 62, 129, 0, 127, 63, 201, 56, 246, 50, 102, 102, 102, 63, 51, 51, 19, 64, 204, 204, 220, 191, 129, 0, 127, 63, 201, 56, 246, 50, 102, 102, 102, 191, 51, 51, 19, 64, 205, 204, 76, 62, 127, 0, 127, 63, 204, 56, 247, 38, 102, 102, 102, 191, 0, 0, 0, 0, 205, 204, 76, 62, 127, 0, 127, 63, 0, 54, 204, 38, 102, 102, 102, 191, 10, 215, 35, 60, 204, 204, 220, 191, 127, 0, 127, 63, 0, 54, 204, 38, 102, 102, 102, 191, 51, 51, 19, 64, 204, 204, 220, 191, 127, 0, 127, 63, 204, 56, 247, 38, 102, 102, 102, 191, 51, 51, 19, 64, 205, 204, 76, 62, 0, 129, 127, 63, 204, 56, 247, 38, 102, 102, 102, 191, 51, 51, 19, 64, 204, 204, 220, 191, 0, 129, 127, 63, 204, 56, 247, 38, 102, 102, 102, 63, 51, 51, 19, 64, 204, 204, 220, 191, 0, 129, 127, 63, 201, 56, 246, 50, 102, 102, 102, 63, 51, 51, 19, 64, 205, 204, 76, 62, 0, 129, 127, 63, 201, 56, 246, 50, 102, 102, 102, 191, 10, 215, 35, 60, 204, 204, 220, 191, 0, 126, 127, 193, 217, 48, 0, 52, 102, 102, 102, 191, 0, 0, 0, 0, 205, 204, 76, 62, 0, 126, 127, 193, 217, 48, 0, 52, 102, 102, 102, 63, 0, 0, 0, 0, 205, 204, 76, 62, 0, 126, 127, 193, 120, 53, 0, 52, 102, 102, 102, 63, 10, 215, 35, 60, 204, 204, 220, 191, 0, 126, 127, 193, 120, 53, 0, 52 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 0, 0, 3, 0, 2, 0, 4, 0, 6, 0, 5, 0, 7, 0, 6, 0, 4, 0, 8, 0, 10, 0, 9, 0, 8, 0, 11, 0, 10, 0, 12, 0, 14, 0, 13, 0, 12, 0, 15, 0, 14, 0, 16, 0, 18, 0, 17, 0, 16, 0, 19, 0, 18, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 30,
"material": ExtResource( 1 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 20
}

[sub_resource type="ConcavePolygonShape" id=3]
data = PoolVector3Array( 1.7, 3, 0.2, -1.7, 3, -1.825, 1.7, 3, -1.825, 1.7, 3, 0.2, -1.7, 3, 0.2, -1.7, 3, -1.825, -1.7, 3, 0.2, -0.9, 0, 0.2, -1.7, 0, 0.2, -1.7, 3, 0.2, -0.9, 2.3, 0.2, -0.9, 0, 0.2, 0.9, 2.3, 0.2, 1.7, 0, 0.2, 0.9, 0, 0.2, 0.9, 2.3, 0.2, 1.7, 3, 0.2, 1.7, 0, 0.2, -1.7, 3, 0.2, 0.9, 2.3, 0.2, -0.9, 2.3, 0.2, -1.7, 3, 0.2, 1.7, 3, 0.2, 0.9, 2.3, 0.2, -1.7, 3, -1.825, -1.7, 0, 0.2, -1.7, 0, -1.825, -1.7, 3, -1.825, -1.7, 3, 0.2, -1.7, 0, 0.2, -1.7, 0, 0.2, 1.7, 0, -1.825, -1.7, 0, -1.825, -1.7, 0, 0.2, 1.7, 0, 0.2, 1.7, 0, -1.825, -0.9, 0, 0.2, 1.7, 0, 0.2, -1.7, 0, 0.2, 0.9, 0, 0.2, 1.7, 0, 0.2, -0.9, 0, 0.2, 1.7, 3, 0.2, 1.7, 0, -1.825, 1.7, 0, 0.2, 1.7, 3, 0.2, 1.7, 3, -1.825, 1.7, 0, -1.825, 1.7, 3, -1.825, -1.7, 0, -1.825, 1.7, 0, -1.825, 1.7, 3, -1.825, -1.7, 3, -1.825, -1.7, 0, -1.825, -0.9, 2.3, -1.725, 0.9, 0.01, -1.725, -0.9, 0.01, -1.725, -0.9, 2.3, -1.725, 0.9, 2.3, -1.725, 0.9, 0.01, -1.725, 0.9, 0.01, -1.725, 0.9, 2.3, 0.2, 0.9, 0, 0.2, 0.9, 2.3, -1.725, 0.9, 2.3, 0.2, 0.9, 0.01, -1.725, -0.9, 2.3, 0.2, -0.9, 0.01, -1.725, -0.9, 0, 0.2, -0.9, 2.3, 0.2, -0.9, 2.3, -1.725, -0.9, 0.01, -1.725, -0.9, 2.3, 0.2, 0.9, 2.3, -1.725, -0.9, 2.3, -1.725, -0.9, 2.3, 0.2, 0.9, 2.3, 0.2, 0.9, 2.3, -1.725, -0.9, 0.01, -1.725, 0.9, 0, 0.2, -0.9, 0, 0.2, -0.9, 0.01, -1.725, 0.9, 0.01, -1.725, 0.9, 0, 0.2 )

[sub_resource type="ArrayMesh" id=2]
resource_name = "Lift_Cube001"
surfaces/0 = {
"aabb": AABB( -1, 0, -0.0765977, 1, 2.31001, 0.153195 ),
"array_data": PoolByteArray( 0, 0, 128, 191, 10, 215, 19, 64, 64, 223, 156, 189, 129, 0, 0, 127, 0, 57, 0, 58, 0, 0, 128, 191, 0, 0, 0, 0, 64, 223, 156, 189, 129, 0, 0, 127, 0, 54, 0, 58, 0, 0, 128, 191, 0, 0, 0, 0, 64, 223, 156, 61, 129, 0, 0, 127, 0, 54, 0, 60, 0, 0, 128, 191, 10, 215, 19, 64, 64, 223, 156, 61, 129, 0, 0, 127, 0, 57, 0, 60, 0, 0, 0, 0, 10, 215, 19, 64, 64, 223, 156, 189, 127, 127, 0, 127, 0, 57, 0, 56, 0, 0, 0, 0, 0, 0, 0, 0, 64, 223, 156, 189, 127, 127, 0, 127, 0, 54, 0, 56, 0, 0, 128, 191, 0, 0, 0, 0, 64, 223, 156, 189, 127, 127, 0, 127, 0, 54, 0, 58, 0, 0, 128, 191, 10, 215, 19, 64, 64, 223, 156, 189, 127, 127, 0, 127, 0, 57, 0, 58, 0, 0, 0, 0, 10, 215, 19, 64, 64, 223, 156, 61, 127, 0, 0, 127, 0, 57, 0, 52, 0, 0, 0, 0, 0, 0, 0, 0, 64, 223, 156, 61, 127, 0, 0, 127, 0, 54, 0, 52, 0, 0, 0, 0, 0, 0, 0, 0, 64, 223, 156, 189, 127, 0, 0, 127, 0, 54, 0, 56, 0, 0, 0, 0, 10, 215, 19, 64, 64, 223, 156, 189, 127, 0, 0, 127, 0, 57, 0, 56, 0, 0, 128, 191, 10, 215, 19, 64, 64, 223, 156, 61, 0, 0, 0, 127, 0, 57, 0, 0, 0, 0, 128, 191, 0, 0, 0, 0, 64, 223, 156, 61, 0, 0, 0, 127, 0, 54, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 64, 223, 156, 61, 0, 0, 0, 127, 0, 54, 0, 52, 0, 0, 0, 0, 10, 215, 19, 64, 64, 223, 156, 61, 0, 0, 0, 127, 0, 57, 0, 52, 0, 0, 128, 191, 0, 0, 0, 0, 64, 223, 156, 61, 0, 129, 127, 63, 0, 48, 0, 52, 0, 0, 128, 191, 0, 0, 0, 0, 64, 223, 156, 189, 0, 129, 127, 63, 0, 48, 0, 56, 0, 0, 0, 0, 0, 0, 0, 0, 64, 223, 156, 189, 0, 129, 127, 63, 0, 54, 0, 56, 0, 0, 0, 0, 0, 0, 0, 0, 64, 223, 156, 61, 0, 129, 127, 63, 0, 54, 0, 52, 0, 0, 0, 0, 10, 215, 19, 64, 64, 223, 156, 61, 0, 127, 129, 63, 0, 57, 0, 52, 0, 0, 0, 0, 10, 215, 19, 64, 64, 223, 156, 189, 0, 127, 129, 63, 0, 57, 0, 56, 0, 0, 128, 191, 10, 215, 19, 64, 64, 223, 156, 189, 0, 127, 129, 63, 0, 59, 0, 56, 0, 0, 128, 191, 10, 215, 19, 64, 64, 223, 156, 61, 0, 127, 129, 63, 0, 59, 0, 52 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 0, 0, 3, 0, 2, 0, 4, 0, 6, 0, 5, 0, 4, 0, 7, 0, 6, 0, 8, 0, 10, 0, 9, 0, 8, 0, 11, 0, 10, 0, 12, 0, 14, 0, 13, 0, 12, 0, 15, 0, 14, 0, 16, 0, 18, 0, 17, 0, 16, 0, 19, 0, 18, 0, 20, 0, 22, 0, 21, 0, 20, 0, 23, 0, 22, 0 ),
"blend_shape_data": [  ],
"format": 2194711,
"index_count": 36,
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.992562, 0.914, 0.5 )

[sub_resource type="BoxShape" id=5]
extents = Vector3( 1.23334, 1.44881, 0.152671 )

[node name="Lift" type="StaticBody"]
script = ExtResource( 3 )

[node name="Lift" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = null
material/1 = null

[node name="Collider" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="LiftDoorL" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.05, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="LiftDoorR" type="MeshInstance" parent="."]
transform = Transform( -1, 0, 0, 0, 1, 0, 0, 0, 1, 0.05, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="Area" type="Area" parent="."]

[node name="Collider" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -0.981727 )
shape = SubResource( 4 )

[node name="DoorCollider" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00306082, 1.31337, 0.0217777 )
shape = SubResource( 5 )
